--- a/xctool/xctool.xcconfig
+++ b/xctool/xctool.xcconfig
@@ -30,9 +30,8 @@ XCTOOL_VENDOR_DIR = $(SRCROOT)/../Vendor
 // DYLD paths on startup to make sure they can be loaded.
 OTHER_LDFLAGS = -weak_framework DVTFoundation -weak_framework DVTiPhoneSimulatorRemoteClient -weak_framework CoreSimulator -weak_framework XCTest
 
-FRAMEWORK_SEARCH_PATHS_0600 = "$(DEVELOPER_LIBRARY_DIR)/Frameworks" "$(SHARED_FRAMEWORKS_DIR)" "$(PRIVATE_FRAMEWORKS_DIR)" "$(DEVELOPER_PRIVATE_FRAMEWORKS_DIR)" "$(XCTOOL_VENDOR_DIR)" "$(OS_X_PLATFORM_DEVELOPER_FRAMEWORKS)"
-FRAMEWORK_SEARCH_PATHS_0700 = $(FRAMEWORK_SEARCH_PATHS_0600) "$(MIGRATION_FRAMEWORKS_DIR)"
-FRAMEWORK_SEARCH_PATHS = $(FRAMEWORK_SEARCH_PATHS_$(XCODE_VERSION_MAJOR))
+FRAMEWORK_SEARCH_PATHS_0700 = "$(DEVELOPER_LIBRARY_DIR)/Frameworks" "$(SHARED_FRAMEWORKS_DIR)" "$(PRIVATE_FRAMEWORKS_DIR)" "$(DEVELOPER_PRIVATE_FRAMEWORKS_DIR)" "$(XCTOOL_VENDOR_DIR)" "$(OS_X_PLATFORM_DEVELOPER_FRAMEWORKS)" "$(MIGRATION_FRAMEWORKS_DIR)"
+FRAMEWORK_SEARCH_PATHS = $(FRAMEWORK_SEARCH_PATHS_0700)
 
 MACOSX_DEPLOYMENT_TARGET = 10.7
 CLANG_ENABLE_OBJC_ARC = YES
