--- a/xctool/xctool.xcconfig
+++ b/xctool/xctool.xcconfig
@@ -23,15 +23,13 @@ DEVELOPER_PRIVATE_FRAMEWORKS_DIR = $(DEVELOPER_DIR)/Platforms/iPhoneSimulator.pl
 OS_X_PLATFORM_DEVELOPER_FRAMEWORKS = $(DEVELOPER_DIR)/Platforms/MacOSX.platform/Developer/Library/Frameworks
 SHARED_FRAMEWORKS_DIR = $(DEVELOPER_DIR)/../SharedFrameworks
 PRIVATE_FRAMEWORKS_DIR = $(DEVELOPER_DIR)/Library/PrivateFrameworks
-MIGRATION_FRAMEWORKS_DIR = $(DEVELOPER_DIR)/Library/MigrationFrameworks
 XCTOOL_VENDOR_DIR = $(SRCROOT)/../Vendor
 
 // xctool will weak link following frameworks, and then configure the necessary
 // DYLD paths on startup to make sure they can be loaded.
 OTHER_LDFLAGS = -weak_framework DVTFoundation -weak_framework DVTiPhoneSimulatorRemoteClient -weak_framework CoreSimulator -weak_framework XCTest
 
-FRAMEWORK_SEARCH_PATHS_0700 = "$(DEVELOPER_LIBRARY_DIR)/Frameworks" "$(SHARED_FRAMEWORKS_DIR)" "$(PRIVATE_FRAMEWORKS_DIR)" "$(DEVELOPER_PRIVATE_FRAMEWORKS_DIR)" "$(XCTOOL_VENDOR_DIR)" "$(OS_X_PLATFORM_DEVELOPER_FRAMEWORKS)" "$(MIGRATION_FRAMEWORKS_DIR)"
-FRAMEWORK_SEARCH_PATHS = $(FRAMEWORK_SEARCH_PATHS_0700)
+FRAMEWORK_SEARCH_PATHS = "$(DEVELOPER_LIBRARY_DIR)/Frameworks" "$(SHARED_FRAMEWORKS_DIR)" "$(PRIVATE_FRAMEWORKS_DIR)" "$(DEVELOPER_PRIVATE_FRAMEWORKS_DIR)" "$(XCTOOL_VENDOR_DIR)" "$(OS_X_PLATFORM_DEVELOPER_FRAMEWORKS)"
 
 MACOSX_DEPLOYMENT_TARGET = 10.7
 CLANG_ENABLE_OBJC_ARC = YES
